--- a/FirstProject/Gemfile
+++ b/FirstProject/Gemfile
@@ -1,5 +1,8 @@
 source 'https://rubygems.org'
 
+gem 'pry-byebug'
+gem 'devise'
+gem 'redditkit', '~> 1.0.1'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.0.beta2'
