--- a/FirstProject/Gemfile
+++ b/FirstProject/Gemfile
@@ -1,8 +1,13 @@
 source 'https://rubygems.org'
 
-gem 'pry-byebug'
 gem 'devise'
 gem 'redditkit', '~> 1.0.1'
+gem 'omniauth-facebook'
+gem 'omniauth-google-oauth2'
+gem 'omniauth-youtube'
+gem 'omniauth-github'
+gem 'omniauth-twitter'
+
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.0.beta2'
@@ -43,6 +48,9 @@ group :development, :test do
   gem 'web-console', '~> 2.0.0.beta4'
 
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
+  gem 'pry-byebug'
+  gem 'pry-rails'
   gem 'spring'
+  gem 'dotenv-rails'
 end
 
