--- a/FirstProject/Gemfile
+++ b/FirstProject/Gemfile
@@ -7,6 +7,7 @@ gem 'omniauth-google-oauth2'
 gem 'omniauth-youtube'
 gem 'omniauth-github'
 gem 'omniauth-twitter'
+gem 'rails_12factor', group: :production
 
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
